<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/mainDetailsLayout">
    <ImageView
        android:id="@+id/img_details"
        style="@style/imageViewDetails"
        />

    <LinearLayout
        android:layout_marginTop="@dimen/big_margin"
        style="@style/second_details_layouts"
        >
        <TextView
            android:id="@+id/title_string"
            android:text="@string/title"
            style="@style/info_text_view"

            />
        <TextView
            android:id="@+id/title_details"
            style="@style/details_text_view"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/small_margin"
        style="@style/second_details_layouts">
        <TextView
            android:id="@+id/author_string"
            android:text="@string/author"
            style="@style/info_text_view"
            />
        <TextView
            android:id="@+id/author_details"
            style="@style/details_text_view"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/small_margin"
        style="@style/second_details_layouts">
        <TextView
            android:id="@+id/pages_string"
            android:text="@string/number_of_pages"
            style="@style/info_text_view"
            />
        <TextView
            android:id="@+id/pages_details"
            style="@style/details_text_view"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/small_margin"
        style="@style/second_details_layouts">
        <TextView
            android:id="@+id/publisher_string"
            android:text="@string/publisher"
            style="@style/info_text_view"
            />
        <TextView
            android:id="@+id/publisher_details"
            style="@style/details_text_view"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/small_margin"
        style="@style/second_details_layouts">
        <TextView
            android:id="@+id/language_string"
            android:text="@string/languages"
            style="@style/info_text_view"
            />
        <TextView
            android:id="@+id/language_details"
            style="@style/details_text_view"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/small_margin"
        style="@style/second_details_layouts">
        <TextView
            android:id="@+id/rating_string"
            android:text="@string/rating"
            style="@style/info_text_view"
            />
        <TextView
            android:id="@+id/rating_details"
            style="@style/details_text_view"
            />
    </LinearLayout>
</LinearLayout>